# foxtrot

./: README.md
.github/workflows/: regression.yml
cdt/: Cargo.toml
cdt/src/: contour.rs  half.rs  hull.rs  lib.rs  triangulate.rs
gui/: Cargo.toml
gui/examples/: debug_cdt.rs  diag.rs  regression_test.rs  test_tessellate.rs
nurbs/src/: sampled_curve.rs  sampled_surface.rs
scripts/: extract_steps.py  extract_test_assets.sh  ingest_kicad_pcb.py
step/src/: parse.rs  step_file.rs
test_assets/: baseline.json
triangulate/: Cargo.toml
triangulate/examples/: step_to_stl.rs
triangulate/src/: colored_mesh.rs  curve.rs  lib.rs  surface.rs  time_provider.rs  triangulate.rs
wasm/: Cargo.toml
wasm/deploy/: app.js  worker.js
wasm/src/: lib.rs
